Fixing alignment of reCAPTCHA

--- a/view/frontend/web/css/source/_module.less
+++ b/view/frontend/web/css/source/_module.less
@@ -19,6 +19,10 @@
 
     #paypal-fastlane-payment {
         margin-bottom: @indent__base;
+
+        + .checkout-agreements-block {
+            margin-bottom: @indent__base;
+        }
     }
 
     .paypal-fastlane-shipping-change-address-form {
